# azure-ai-engineer-training

./: .gitignore  README.org  pyproject.toml
src/azure_ai_engineer_training/: __init__.py
src/azure_ai_engineer_training/01-use-azure-ai-services/: 01-use-azure-ai-services.md
src/azure_ai_engineer_training/01-use-azure-ai-services/rest-client/: rest-client.py
src/azure_ai_engineer_training/01-use-azure-ai-services/sdk-client/: sdk-client.py
