[project]
name = "azure-ai-engineer-training"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "outcastgeek", email = "outcastgeek+gitkraken@gmail.com" }
]
dependencies = [
    "flask>=3.0.3",
    "httpx>=0.27.0",
    "matplotlib>=3.9.0",
    "pillow>=10.3.0",
    "numpy>=2.0.0",
    "marimo>=0.6.23",
    "azure-ai-textanalytics==5.3.0",
    "python-dotenv>=1.0.1",
]
#readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.10",
    "pytest>=8.2.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/azure_ai_engineer_training"]
